syntax = "proto3";

package analyzer;

option go_package = "api-analyzer";

import "google/protobuf/timestamp.proto";
import "common/common.proto";

message PeriodBalance {
  google.protobuf.Timestamp period_start = 1;
  google.protobuf.Timestamp period_end = 2;
  common.Money income = 3;
  common.Money expense = 4;
  common.Money balance = 5;
  repeated CategorySpending category_breakdown = 6;
}

message CategorySpending {
  string category_id = 1;
  common.Money total_amount = 2;
}

message Forecast {
  google.protobuf.Timestamp period_start = 1;
  google.protobuf.Timestamp period_end = 2;
  common.Money expected_income = 3;
  common.Money expected_expense = 4;
  common.Money expected_balance = 5;
  repeated CategorySpending category_breakdown = 6;
}

message GetStatisticsRequest {
  string user_id = 1;
  google.protobuf.Timestamp start_date = 2;
  google.protobuf.Timestamp end_date = 3;
  common.TimePeriod group_by = 4;
}

message GetStatisticsResponse {
  common.Money total_income = 1;
  common.Money total_expense = 2;
  repeated PeriodBalance period_data = 4;
}

message GetForecastRequest {
  string user_id = 1;
  common.TimePeriod period = 2;
  int32 periods_ahead = 3;
}

message GetForecastResponse {
  repeated Forecast forecasts = 1;
}

service AnalyzerService {
  rpc GetStatistics(GetStatisticsRequest) returns (GetStatisticsResponse);
  rpc GetForecast(GetForecastRequest) returns (GetForecastResponse);
}
